dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-service
spec:
  selector:
    help: go
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
