dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
    - http:
        paths:
          - path: /go
            backend:
              service:
                name: go-service
                port:
                  number: 3000
            pathType: Prefix
